--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {%set name = "fuzzywuzzy" %}
-{%set version = "0.11.0" %}
+{%set version = "0.12.0" %}
 {%set hash_type = "sha256" %}
-{%set hash_val = "3d3d961c24aec15d48e9d2a60d7fdffce18d0a168d4e0ca2dd22571d5c53cc80" %}
+{%set hash_val = "0a39865799ada1d514c8ac612194a2d1c8a335f67c17078d5ab0bb9ec980ac33" %}
 
 package:
   name: {{ name }}
@@ -13,7 +13,7 @@ source:
   {{ hash_type }}: {{ hash_val }}
 
 build:
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -28,7 +28,11 @@ requirements:
 test:
   imports:
     - fuzzywuzzy
+    - fuzzywuzzy.StringMatcher
+    - fuzzywuzzy.fuzz
+    - fuzzywuzzy.process
     - fuzzywuzzy.string_processing
+    - fuzzywuzzy.utils
 
 about:
   home: https://github.com/seatgeek/fuzzywuzzy
