--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,21 @@
 {%set name = "fuzzywuzzy" %}
-{%set version = "0.12.0" %}
+{%set version = "0.15.0" %}
+{%set compress_type = "tar.gz" %}
 {%set hash_type = "sha256" %}
-{%set hash_val = "0a39865799ada1d514c8ac612194a2d1c8a335f67c17078d5ab0bb9ec980ac33" %}
+{%set hash_val = "5b36957ccf836e700f4468324fa80ba208990385392e217be077d5cd738ae602" %}
+{%set build_num = "0" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.{{ compress_type }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ compress_type }}
   {{ hash_type }}: {{ hash_val }}
 
 build:
-  number: 0
+  number: {{ build_num }}
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -36,8 +38,12 @@ test:
 
 about:
   home: https://github.com/seatgeek/fuzzywuzzy
-  license: MIT
+  license: GPLv2
+  license_family: GPL
+  license_file: LICENSE.txt
   summary: 'Fuzzy string matching in python'
+  dev_url: https://github.com/seatgeek/fuzzywuzzy
+  doc_url: http://chairnerd.seatgeek.com/fuzzywuzzy-fuzzy-string-matching-in-python/
 
 extra:
   recipe-maintainers:
