add setuptools and cleanup

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,13 @@
 {% set name = "fuzzywuzzy" %}
 {% set version = "0.18.0" %}
-{% set bundle = "tar.gz" %}
-{% set hash = "45016e92264780e58972dca1b3d939ac864b78437422beecebb3095f8efd00e8" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  sha256: {{ hash }}
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 45016e92264780e58972dca1b3d939ac864b78437422beecebb3095f8efd00e8
 
 build:
   number: 1
@@ -21,6 +18,7 @@ build:
 requirements:
   host:
     - python {{ python_min }}
+    - setuptools
     - pip
 
   run:
@@ -30,6 +28,7 @@ requirements:
 test:
   requires:
     - python {{ python_min }}
+    - pip
   imports:
     - fuzzywuzzy
     - fuzzywuzzy.StringMatcher
@@ -37,6 +36,8 @@ test:
     - fuzzywuzzy.process
     - fuzzywuzzy.string_processing
     - fuzzywuzzy.utils
+  commands:
+    - pip check
 
 about:
   home: https://github.com/seatgeek/fuzzywuzzy
